# c4

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  projenv  projenv.ps1
c4/: CMakeLists.txt  main.cpp
c4/app/: CMakeLists.txt
c4/app/cli/: CMakeLists.txt  app.cpp  app.hpp  argparser.cpp  argparser.hpp  board_analyzer.cpp  board_analyzer.hpp  game.cpp  game.hpp  move_finder.cpp  move_finder.hpp
c4/core/: CMakeLists.txt  move_sorter.cpp  move_sorter.hpp  opening_book.cpp  opening_book.hpp  position.cpp  position.hpp  solver.cpp  solver.hpp  transposition_table.cpp  transposition_table.hpp
data/: warmup.book
